--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 ## postgres
-spring.datasource.url=jdbc:postgresql://dbpostgresql:5432/eshop
+spring.datasource.url=jdbc:postgresql://localhost:5432/eshop
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
