--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-## postgres
+# postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/eshop
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -21,3 +21,12 @@ email.regex=^[a-zA-Z0-9_+&*-]+(?:\\.[a-zA-Z0-9_+&*-]+)*@(?:[a-zA-Z0-9-]+\\.)+[a-
 email.sender=e@commerce.shop
 email.subject=Activation email
 email.text=localhost:%d/auth/account-verification?token=%s
+
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=your@email.address
+mail.password=your_password
+mail.transferProtocol=smtp
+mail.smtpAuth=true
+mail.smtpStarttlsEnable=true
+mail.debug=true
