--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 server.port=8080
 
 # postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/eshop
+spring.datasource.url=<db-url>
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=<db-username>
+spring.datasource.password=<db-password>
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
