--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ email.text=localhost:%d/auth/account-verification?token=%s
 
 mail.host=smtp.gmail.com
 mail.port=587
-mail.username=your@email.address
-mail.password=your_password
+mail.username=<your-app-email>
+mail.password=<your-app-email-password>
 mail.transferProtocol=smtp
 mail.smtpAuth=true
 mail.smtpStarttlsEnable=true
